# api/openapi.json
@@ -69,7 +69,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/AskDto"
+                "$ref": "#/components/schemas/QuestionCreateDto"
               }
             }
           }
@@ -99,7 +99,7 @@
         "type": "object",
         "properties": {}
       },
-      "AskDto": {
+      "QuestionCreateDto": {
         "type": "object",
         "properties": {}
       }
